fixed backdrop-filter issue on firefox

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -326,9 +326,9 @@ main {
     display: none;
     position: fixed;
     top: 0;
-    z-index: 1;
-    background-color: initial;
-    backdrop-filter: blur(40px);
+    z-index: 200;
+    background-color: rgba(4, 14, 20, .9);
+    backdrop-filter: blur(10px);
     overflow-y: scroll;
 }
 
